add playlist_track swagger / fix playlist_track controller
