# swagger/v1/swagger.yaml
@@ -233,6 +233,63 @@ paths:
       responses:
         '204':
           description: successful
+  "/playlist_tracks":
+    post:
+      summary: create playlist_track
+      tags:
+      - playlist_track
+      parameters:
+      - name: user_id
+        in: query
+        description: 사용자 검증을 위해 사용
+        required: true
+        schema:
+          type: integer
+      - name: playlist_id
+        in: query
+        description: 사용자 검증을 위해 사용
+        required: true
+        schema:
+          type: integer
+      description: playlist_track를 생성합니다. <br> body의 user_id는 playlist_track을 생성한
+        사람입니다. <br> 사용자 검증을 위하여 user_id와 playlist_id를 추가로 받습니다.
+      responses:
+        '201':
+          description: create playlist_track
+      requestBody:
+        content:
+          application/json:
+            schema:
+              "$ref": "#/components/schemas/playlist_track_object"
+  "/playlist_tracks/{id}":
+    parameters:
+    - name: id
+      in: path
+      description: id
+      required: true
+      schema:
+        type: string
+    delete:
+      summary: delete playlist_track
+      tags:
+      - playlist_track
+      parameters:
+      - name: user_id
+        in: query
+        description: 사용자 검증을 위해 사용
+        required: true
+        schema:
+          type: integer
+      - name: playlist_id
+        in: query
+        description: 사용자 검증을 위해 사용
+        required: true
+        schema:
+          type: integer
+      description: playlist_track을 삭제합니다.
+      responses:
+        '204':
+          description: successful
   "/playlists":
     get:
       summary: list playlists
@@ -449,5 +506,22 @@ components:
             title:
               type: string
               example: 내 앨범1
+      required:
+      - title
+    playlist_track_object:
+      type: object
+      properties:
+        artist:
+          type: object
+          properties:
+            playlist_id:
+              type: integer
+              example: 1
+            track_id:
+              type: integer
+              example: 1
+            user_id:
+              type: integer
+              example: 1
       required:
       - title
